// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component sanity matches default snapshot 1`] = `
.c1 {
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 32px;
  padding-right: 32px;
  color: #fff;
  background-color: #4E3FCE;
  font-size: inherit;
  height: 48px;
  position: relative;
  border: 0;
  border-color: none;
  border-radius: 4px;
  border-color: none;
  border-radius: 4px;
  text-align: left;
}

.c1 {
  box-sizing: border-box;
}

.c0 {
  font-size: inherit;
  font-weight: 600;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  min-width: 3rem;
}

.c0 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  line-height: 1;
  overflow: hidden;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
}

.c0.c0:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #5f52d2;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c0:active {
  background-color: #4638b9;
  box-shadow: none;
}

.c0:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c0 > svg {
  display: block;
}

.c0 > svg:first-child {
  margin-left: -.5rem;
  margin-right: .5rem;
}

.c0 > svg:last-child {
  margin-left: .5rem;
  margin-right: -.5rem;
}

.c0 > svg:first-child:last-child {
  margin: 0;
}

<button
  class="c0 c1"
  color="white"
  font-family="sansSerif"
  font-size="inherit"
  font-weight="3"
  height="48px"
  type="button"
>
  
</button>
`;

exports[`Button component sanity matches themed snapshot 1`] = `
.c2 {
  margin: 0;
  padding-top: 0;
  padding-bottom: 0;
  padding-left: 32px;
  padding-right: 32px;
  color: #fff;
  background-color: #4E3FCE;
  font-size: inherit;
  height: 48px;
  position: relative;
  border: 0;
  border-color: none;
  border-radius: 4px;
  border-color: none;
  border-radius: 4px;
  text-align: left;
}

.c2 {
  box-sizing: border-box;
}

.c1 {
  font-size: inherit;
  font-weight: 600;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  font-size: 1rem;
  min-width: 3rem;
}

.c1 {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  line-height: 1;
  overflow: hidden;
  white-space: nowrap;
  -webkit-font-smoothing: antialiased;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-transition: all .15s ease;
  transition: all .15s ease;
}

.c1.c1:hover {
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  background-color: #5f52d2;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.2);
}

.c1:active {
  background-color: #4638b9;
  box-shadow: none;
}

.c1:disabled {
  opacity: 0.4;
  cursor: not-allowed;
}

.c1 > svg {
  display: block;
}

.c1 > svg:first-child {
  margin-left: -.5rem;
  margin-right: .5rem;
}

.c1 > svg:last-child {
  margin-left: .5rem;
  margin-right: -.5rem;
}

.c1 > svg:first-child:last-child {
  margin: 0;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <button
    class="c1 c2"
    color="white"
    font-family="sansSerif"
    font-size="inherit"
    font-weight="3"
    height="48px"
    type="button"
  >
    
  </button>
</div>
`;
